started work on a second page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     color: red;
     font-size: 2em;
 }
@@ -16,4 +16,14 @@ div {
 button {
     border-radius: 100px;
     background-color: darkgrey;
+} */
+
+
+h1 {
+    color: red;
+    font-size: 2em;
+}
+
+p {
+    color: green
 }
